# apr-leaderboard

./: .gitignore  .pmat-metrics.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  book.toml  clean.jsonl  data_catalog.yaml
configs/: deepseek-r1-distill-7b.toml  phi-4.toml  qwen-coder-1.5b.toml  qwen-coder-32b.toml  qwen-coder-7b.toml  recipe-a-quick-lora.toml  recipe-b-merge-alchemist.toml  recipe-c-full-pipeline.toml  recipe-d-sovereign-binary.toml
contracts/: BINDING_REGISTRY.md  CONTRACT_STATUS.md  CONTRACT_VERIFICATION.md  binding-coverage.yaml  compile-binary.yaml  cublas-gemm-wrapper.yaml  data-governance.yaml  data-quality.yaml  decontamination.yaml  distillation.yaml  dpo-alignment.yaml  forward-pass-perf.yaml  ft-completeness.yaml  fused-cross-entropy.yaml  gpu-output-norm.yaml  hf-parity.yaml  inference-throughput.yaml  leaderboard-gate.yaml  lora-algebra.yaml  lora-finetune-eval.yaml  merge-weight-norm.yaml  nf4-dequantization.yaml  pass-at-k.yaml  perplexity-baseline.yaml  pipeline-validation.yaml  preference-pairs.yaml  pruning-quality.yaml  qlora-training-loop.yaml  quantization-quality.yaml  quantization.yaml  ties-sign-resolution.yaml  tokenizer-preservation.yaml  wgsl-gemm-tiled.yaml  wgsl-transpose.yaml
docs/: book.toml
make/: contracts.mk  data.mk  eval.mk  optimization.mk
results/: bench_1.5b_instruct_q4k_cpu.json  bigcodebench_20260323_163901.json  humaneval_20260301_172049.json  humaneval_20260301_225646.json  humaneval_20260313_100327.json  humaneval_20260316_073636.json  humaneval_20260316_124248.json  humaneval_20260318_004437.json  humaneval_20260318_075248.json  humaneval_20260319_043653.json  humaneval_20260319_071222.json  humaneval_20260320_142212.json  humaneval_20260320_172617.json  humaneval_20260321_081819.json  humaneval_20260326_163343.json  humaneval_20260328_121327.json  humaneval_20260328_210344.json  mbpp_20260318_114300.json  mbpp_20260319_121425.json  mbpp_20260320_062537.json  mbpp_20260321_084856.json  mbpp_20260321_102146.json
scripts/: assemble-test.py  canary-pytorch-gpu.py  combine-training-data.sh  compare-results.sh  distill-generate.sh  eval-helpers.sh  (+26 more)
(+173 files in other folders)
