[package]
name = "apr-leaderboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Build, evaluate, and submit .apr models to Hugging Face leaderboards"
repository = "https://github.com/paiml/apr-leaderboard"
keywords = ["machine-learning", "apr", "huggingface", "leaderboard", "evaluation"]
categories = ["science", "development-tools"]

[lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
items_after_statements = "allow"
struct_field_names = "allow"
too_many_lines = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
# Sovereign Stack (latest versions)
aprender = { version = "0.27", features = ["format-compression"] }
trueno = "0.16"
entrenar = "0.7"
ndarray = "0.16"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Async / HTTP (for HF Hub API)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
rand = { version = "0.8", features = ["std_rng"] }
tempfile = "3"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
comfy-table = "7"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
